--- a/src/game/GameBoard.css
+++ b/src/game/GameBoard.css
@@ -1,7 +1,11 @@
 .cards-container {
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1em;
+  align-items: stretch;
 }
 
 .popup {
