--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,15 @@
 
   text-align: center;
   font-family: Smurfesque;
+
+  box-sizing: border-box;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 1.5rem;
 }
 
 header h1 {
+  margin-top: 0;
   padding: .5em .25em;
   background-color: var(--smurf);
   color: white;
@@ -31,3 +37,27 @@ header .big {
 .brainy-explain img {
   max-width: 150px;
 }
+
+footer {
+  position: absolute;
+  bottom: .25rem;
+  left: 0;
+  right: 0;
+}
+
+footer a {
+  color: transparent;
+
+  background-image: linear-gradient(120deg, rgba(255, 255,255, 0) 40%, rgba(255, 255,255, .7) 50%, rgba(255, 255,255, 0) 60%);
+  background-color: var(--smurf);
+  background-size: 250% 100%;
+  background-position-x: 100%;
+  background-clip: text;
+
+  transition: background-position-x 300ms ease-in;
+}
+
+footer a:hover { background-position-x: 0%; }
+
+footer a:visited { background-color: gold; }
+
