--- a/src/game/GameBoard.css
+++ b/src/game/GameBoard.css
@@ -1,3 +1,11 @@
+.GameBoard {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .scores {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -6,11 +14,8 @@
 .scores > *:first-child { grid-column: 2; }
 
 .cards-container {
-  max-width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 1em;
   align-items: stretch;
 }
@@ -55,4 +60,33 @@
 
 .popup button:hover {
   background-position-x: 0%;
+}
+
+@media all and (max-width: 1920px) {
+  .cards-container {
+    font-size: .7rem;
+  }
+
+  .popup p {
+    font-size: 1.2em;
+  }
+}
+
+@media all and (max-width: 900px) {
+  .cards-container {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+}
+
+@media all and (max-width: 720px) {
+  .scores {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .scores > *:first-child { grid-column: 1; }
+
+  .cards-container {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  }
 }
