--- a/src/game/Card.css
+++ b/src/game/Card.css
@@ -8,7 +8,10 @@
   transition-timing-function: ease-in-out;
 }
 
-.Card img { max-width: 200px; }
+.Card img {
+  width: 100%;
+  max-width: 200px;
+}
 
 
 .Card.enabled:hover {
